--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.15.3"
   },
   "scripts": {
     "start": "react-scripts start",
