--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^5.0.5",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.15.6"
   },
   "scripts": {
     "start": "react-scripts start",
